fixed spacing between bento box style boxes in about page, added a flip card to display experience

--- a/style/about.css
+++ b/style/about.css
@@ -16,14 +16,15 @@
 #about-page {
   background-image: radial-gradient(circle, var(--dblue) 0%, var(--black) 100%);
   width: 100vw;
-  height: 160vh;
+  height: 180vh;
   color: var(--txtgrey);
 }
 
 #abt-article {
   display: grid;
-  grid-template-columns: repeat(3, 30vw);
+  grid-template-columns: repeat(3, 31vw);
   grid-template-rows: 28vw 40vw;
+  grid-template-rows: 29vw 41vw;
 }
 
 .article-wrapper {
@@ -47,12 +48,13 @@
 }
 
 #portrait {
-  width: 28vw;
+  width: 29vw;
   height: auto;
   border-radius: 10px;
   align-self: center;
   justify-content: center;
   transform: scaleX(-1);
+  box-shadow: 0 0 10px var(--mblue);
 }
 
 #box2 {
@@ -60,42 +62,45 @@
   grid-column: 2/3;
   display: grid;
   grid-template-rows: 40% 60%;
-  margin-right: 1vw;
+  margin-right: 2vw;
+  margin-left: 1vw;
 }
 
 #info {
   background-color: var(--dblue);
   border-radius: 10px;
-  margin-bottom: 1vw;
+  margin-bottom: 2vw;
+  box-shadow: 0 0 10px var(--mblue);
 }
 
 #message {
   background-color: var(--dblue);
   border-radius: 10px;
+  box-shadow: 0 0 10px var(--mblue);
 }
 
 .name {
   letter-spacing: 1px;
-  margin: 0.5vw 0 0.5vw 1vw;
-  font-size: 2.7vw;
+  margin: 1vw 0 0 2vw;
+  font-size: 2.5vw;
   color: var(--grey);
 }
 
 .description {
   font-weight: 300;
-  margin: 0 0 0 1vw;
-  font-size: 1.6vw;
+  margin: 0.3vw 0 0 2vw;
+  font-size: 1.5vw;
   line-height: 2.2vw;
 }
 
 .txt {
-  font-size: 1.3vw;
+  font-size: 1.2vw;
   line-height: 2.2vw;
   font-weight: 300;
 }
 
 .aboutme {
-  padding: 0.75vw 1vw 0.75vw 1vw;
+  padding: 1vw 2vw 1vw 2vw;
 }
 
 b {
@@ -113,6 +118,7 @@ b {
   );
   border-radius: 10px;
   box-shadow: 0 0 10px var(--mblue);
+  margin-right: 1.5vw;
 }
 
 .tech-stack {
@@ -157,7 +163,7 @@ b {
 #box4 {
   grid-column: 1 / span 2;
   grid-row: 2/3;
-  margin: 1vw 1vw 0 1vw;
+  margin: 2vw 2vw 0 1vw;
   border-radius: 10px;
   display: grid;
   grid-template-rows: 30vw 9vw;
@@ -165,12 +171,11 @@ b {
 
 #experience {
   border-radius: 10px;
-  background-image: linear-gradient(var(--mblue), var(--dblue));
 }
 
 #status {
   border-radius: 10px;
-  margin-top: 1vw;
+  margin-top: 2vw;
   text-align: center;
   display: grid;
   justify-content: center;
@@ -179,6 +184,7 @@ b {
   font-weight: 300;
   color: var(--secondary);
   animation: glow-red-animate 2s linear infinite;
+  transition: all 0.5s ease-in-out;
 }
 
 @keyframes glow-red-animate {
@@ -215,4 +221,57 @@ b {
   text-shadow: 0 0 20px white;
   transition-delay: 0.3s;
   transition-duration: 0.5s;
+}
+
+/* FLIP CARD */
+.flip-card {
+  background-color: transparent;
+  width: 100%;
+  height: 100%;
+  /* border: 1px solid #f1f1f1; */
+  perspective: 1000px;
+}
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+  /* background-image: linear-gradient(var(--mblue), var(--dblue)); */
+  background-color: var(--dblue);
+  color: black;
+  border-radius: 10px;
+  box-shadow: 0 0 10px var(--mblue);
+}
+
+/* Style the back side */
+.flip-card-back {
+  background-image: linear-gradient(#1b1b1b, #333);
+  /* background-color: #333; */
+  color: white;
+  transform: rotateY(180deg);
+  border-radius: 10px;
+  box-shadow: 0 0 10px var(--mblue);
 }
